java ready for debugging