@@ -57,6 +57,7 @@
             <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
             <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
             <jvmArg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</jvmArg>
             </jvmArgs>
         </configuration>
         </plugin>
